Site is much more responsive. Also corrected some code for spacing issues. Should revisit the code to clean up and look at the fonts, that seem confused.

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -30,14 +30,22 @@
  
 #opening-display p{
     text-align: center;
-    font-size: 20px;
     font-family: 'Josefin Sans', sans-serif;
-
+}
+.opening-text {
+    text-align: center;
+    font-size: 20px;
+    color: #e6a152;
 }
 
+#opening-subtext{
+    font-size: 14px;
+    text-align: center;
+    color: #e6a152;
+}
 /* The Musical Theatre Quiz title. */
 h1 {
-    font-size: 40px;
+    font-size: 36px;
     color: #e6a152;
     text-align: center;
     padding: 10px;
@@ -79,7 +87,7 @@ img {
     align-items: center;
     padding: 10px;
     width: 600px;
-    height: 440px;
+    height: 450px;
     margin-top: 200px;
     background-color: black;
     border-style: double;
@@ -87,17 +95,16 @@ img {
     border-radius: 4px;
 }
 
-#quiz-box p {
-    font-size: 20px;
-    color: #e6a152;
-}
+ #quiz-display {
+    margin-top: 0;
+ }
 
 /* Formats the questions. */
 .question-here {
     display: none;
     background-color: black;
     text-align: center;
-    height: 109px;
+    height: 60px;
     font-size: 20px;
     color: #e6a152;
     font-family: 'Josefin Sans', sans-serif;
@@ -175,6 +182,7 @@ img {
     width: auto;
     text-align: center;
     gap: 50px;
+    margin-top: 0px;
  }
 
  /* Curtains Up button. */
@@ -250,6 +258,9 @@ input::placeholder{
     width: 100%;
 }
 
+.final-text {
+    color: #e6a152;
+}
 /* The button you press to submit your initials and save your score. */
 button#saveScoreBtn {
     color:black;
@@ -323,7 +334,7 @@ a.high-scores-button:hover {
 /* ------------------------------------------- */
 @media only screen and (max-width: 600px) {
 #quiz-box {
-    width: 100%;
+    width: 92%;
 }
 
 .button-display {
@@ -332,6 +343,11 @@ a.high-scores-button:hover {
 
 #quiz-display {
     width: 90%;
+
+}
+
+.question-here {
+    height: 110px;
 }
 
 }
